--- a/style.css
+++ b/style.css
@@ -355,16 +355,13 @@ footer {
     -webkit-box-orient: vertical;
 }
 
-/* Estilo para a Descrição do Produto no Card (Limita a 2 linhas) */
 .card-description {
     font-size: 0.85rem;
-    color: var(--dark-gray); /* Cor para o texto da descrição */
-    margin-bottom: 0.5rem; /* Espaço entre a descrição e o preço/rodapé */
-    
-    /* Limita o texto para preservar o layout */
+    color: var(--dark-gray);
+    margin-bottom: 0.5rem;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* Limita a 2 linhas de texto */
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
