--- a/style.css
+++ b/style.css
@@ -391,6 +391,8 @@ footer {
 
 /* Os outros blocos (card-body e card-title) permanecem como estão */
 .card-promo .card-body {
+    padding-top: 10px; /* Reduz o padding superior do corpo do card */
+    padding-bottom: 15px;
     padding: 15px; /* Padding padrão ligeiramente reduzido */
     flex-grow: 1; /* Permite que o body preencha o espaço restante, se houver */
     display: flex;
@@ -399,6 +401,7 @@ footer {
 
 .card-promo .card-title {
     font-size: 1rem; /* Reduz o tamanho da fonte do título */
+    margin-top: 0 !important;
     margin-bottom: 8px; /* Margem menor abaixo do título */
     line-height: 1.3; /* Espaçamento entre linhas mais compacto */
     height: 2.6em; /* Altura fixa para 2 linhas de texto */
@@ -424,7 +427,7 @@ footer {
 
 .card-promo .coupon-badges {
     margin-top: 5px; /* Espaço menor entre descrição e cupons */
-    margin-bottom: 10px; /* Espaço menor entre cupons e preços */
+    margin-bottom: 5px; /* Espaço menor entre cupons e preços */
     display: flex;
     flex-wrap: wrap; /* Permite que os cupons quebrem linha */
     gap: 5px; /* Espaçamento entre os badges */
